tests/snapshots/snapshots__budget_mdbook_guide_src_format_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (1003 tokens)

README.md
     1→# Format
     3→In this section you will learn how to:
     4→
     5→- Structure your book correctly
     6→- Format your `SUMMARY.md` file
     7→- Configure your book using `book.toml`
     8→- Customize your theme

configuration/README.md
     1→# Configuration
     3→This section details the configuration options available in the ***book.toml***:
     4→- **[General]** configuration including the `book`, `rust`, `build` sections
     5→- **[Preprocessor]** configuration for default and custom book preprocessors
     6→- **[Renderer]** configuration for the HTML, Markdown and custom renderers
     7→- **[Environment Variable]** configuration for overriding configuration options in your environment
     8→
     9→[General]: general.md
    10→[Preprocessor]: preprocessors.md
    11→[Renderer]: renderers.md
    12→[Environment Variable]: environment-variables.md

configuration/environment-variables.md
     1→# Environment variables …

configuration/general.md
     1→# General configuration …
    31→## Supported configuration options …

configuration/preprocessors.md
     1→# Configuring Preprocessors …
    26→## Custom preprocessor configuration …
    45→## Locking a preprocessor dependency to a renderer …
    55→## Provide your own command …
    79→## Require a certain order …

configuration/renderers.md
     1→# Configuring Renderers …
    20→## Output tables …
    84→## HTML renderer options …
   286→#### `[output.html.search.chapter]` …
   325→## Markdown renderer …

example.rs
     1→fn main() {
     2→    println!("Hello World!");
     3→#
      →…

markdown.md
     1→# Markdown …
     9→## Text and paragraphs …
    25→## Headings …
    43→#### A smaller heading 
    45→More text.
    46→
    47→## Lists …
    69→## Links …
   108→## Images …
   127→## Extensions …

mathjax.md
     1→# MathJax support …

mdbook.md
     1→# mdBook-specific features …
     3→## Hiding code lines …
    74→## Rust playground …
   102→## Rust code block attributes …
   133→## Including files …
   154→## Including portions of a file …
   215→## Including a file but initially hiding all except specified lines …
   279→## Inserting runnable Rust files …
   310→## Controlling page \<title\> …
   319→## HTML classes provided by mdBook …
   341→## Font-Awesome icons …

summary.md
     1→# SUMMARY.md …

theme/README.md
     1→# Theme
     3→The default renderer uses a [handlebars](https://handlebarsjs.com) template to
     4→render your markdown files and comes with a default theme included in the mdBook
     5→binary.
     6→
     7→The theme is totally customizable, you can selectively replace every file from
     8→the theme by your own by adding a `theme` directory next to `src` folder in your
     9→project root. Create a new file with the name of the file you want to override
    10→and now that file will be used instead of the default file.
    11→
    12→Here are the files you can override:
    13→
      →…

theme/editor.md
     1→# Editor
     3→In addition to providing runnable code playgrounds, mdBook optionally allows them
      →…
    35→## Customizing the editor …

theme/index-hbs.md
     1→# index.hbs
     3→`index.hbs` is the handlebars template that is used to render the book. The
      →…
     9→## Data …
    41→## Handlebars helpers …
    46→### toc …
    80→### resource …
    90→### fa …

theme/syntax-highlighting.md
     1→# Syntax highlighting
     3→mdBook uses [Highlight.js](https://highlightjs.org) with a custom theme
      →…
    17→## Supported languages …
    68→## Custom theme …
    82→## Improve default theme …
